src/objects/PMP__c.object
<CustomObject>
    <description>PMO: Manage Open issues.</description>
    <fields>
        <fullName>Actual_Due_Date__c</fullName>
        <description>实际完成时间</description>
        <label>Actual Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <description>实际开始时间</description>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Baseline_Due_Date__c</fullName>
        <description>比较基准完成时间</description>
        <label>Baseline Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Baseline_Start_Date__c</fullName>
        <description>比较基准开始时间</description>
        <label>Baseline Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <label>Complete%</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>85%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>95%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deliverables__c</fullName>
        <label>Deliverables</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreed Migration Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detailed Field Mapping,Updated Configuration Wrkbook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback to Data Quality Improvement Measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migrated System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Mapping updated in SFDC Data Dic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Issue List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reqs Workbook,Config Workbook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Data Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Plan,Test Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Handout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshop Protocols</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMP_hierarchical__c</fullName>
        <description>Increase PMP hierarchical relationship(increase lookup field, lookup PMP object)</description>
        <label>PMP Hierarchical</label>
        <referenceTo>PMP__c</referenceTo>
        <relationshipLabel>PMP</relationshipLabel>
        <relationshipName>PMP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_condition__c</fullName>
        <label>Pre-condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Ressource__c</fullName>
        <label>Responsible Ressource</label>
        <picklist>
            <picklistValues>
                <fullName>Bob</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christian Eißner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falk Lehmann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greg Zhang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harold Liu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jack Liu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James Luo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jochen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jojo Shi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jorry Chen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mabel Wong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oliver Koeth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ray Chen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sabine Jonientz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sam Wang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tbd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tony Li</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tulipe Lee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivian Lee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wei Song</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zibin Wang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloria Wang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richard Yan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samuel Liu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stella Han</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Odin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tobias</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>CRM Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daimler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WP1 Business Rqs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WP2 Functional Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WP3 Technology Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WP4 Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WP5 Rollout/Migration</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>PMP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>PMP_hierarchical__c</columns>
        <columns>Baseline_Start_Date__c</columns>
        <columns>Baseline_Due_Date__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Actual_Due_Date__c</columns>
        <columns>Responsible_Ressource__c</columns>
        <columns>Team__c</columns>
        <columns>Pre_condition__c</columns>
        <columns>Deliverables__c</columns>
        <columns>Complete__c</columns>
        <columns>Note__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PMP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>